--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "^2.0.0",
-    "puppeteer-core": "^2.0.0"
+    "chrome-aws-lambda": "^2.1.1",
+    "puppeteer-core": "^2.1.1",
+    "libnss3":
   },
   "devDependencies": {
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.1.1"
   }
 }
